
Version 7.4.0 - 2024-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add logo of companies

Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Activate employee based on dates
* Use template substitution for company header/footer

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.12
* Remove employee and employees from evaluation context of rule domain
* Define when set or reset employee field

Version 6.8.0 - 2023-05-01
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.7
* Add support for Python 3.11

Version 6.6.0 - 2022-10-31
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.4.0 - 2022-05-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.10
* Remove support for Python 3.6

Version 6.2.0 - 2021-11-01
--------------------------
* Bug fixes (see mercurial logs for details)

Version 6.0.0 - 2021-05-03
--------------------------
* Bug fixes (see mercurial logs for details)
* Enforce companies rule
* Add company filter
* Remove tree structure from company
* Add test on context of company multivalue target fields
* Use report header for CompanyReport

Version 5.8.0 - 2020-11-02
--------------------------
* Bug fixes (see mercurial logs for details)
* Remove support for Python 3.5

Version 5.6.0 - 2020-05-04
--------------------------
* Bug fixes (see mercurial logs for details)
* Add methods to set/reset employee fields
* Do not show company in user status if unique
* Show employee in user status if not unique
* Add supervisor and subordinates of employee
* Add employee to rule context
* Add company and employee administrator group
* Add top level menu entry

Version 5.4.0 - 2019-11-04
--------------------------
* Bug fixes (see mercurial logs for details)
