@@ -1,3 +1,4 @@
+* Add tax identifiers to company
 
 Version 7.4.0 - 2024-11-04
 --------------------------
